--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lokaly",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "A library that helps you Localizate your app!",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,6 @@
     "lokaly"
   ],
   "author": "ragokan",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
